# nixosandbox

./: .gitignore  README.md  docker-compose.yml  openapi.yaml
.claude/skills-factory/: SKILL.md
.claude/skills-factory/references/: best-practices-checklist.md
.claude/skills-factory/scripts/: init_skill.py  package_skill.py  validate_skill.py
docs/plans/: 2025-12-23-browser-automation-design.md  2025-12-23-rust-sandbox-api.md  2025-12-23-skills-tee-design.md
nix/: shell.nix
sandbox-api/: client.py  main.py
sandbox-rs/: Cargo.toml  Makefile
sandbox-rs/"/home/gem"/.skills/python-automation-694fbf8f-4c51-44db-b401-4ad5eeb990c2/: SKILL.md
sandbox-rs/"/home/gem"/.skills/python-automation-a7933597-cfe1-44bd-a133-ac913d2db62c/: SKILL.md
sandbox-rs/"/home/gem"/.skills/rust-programming-694fbf8f-4c51-44db-b401-4ad5eeb990c2/: SKILL.md
sandbox-rs/"/home/gem"/.skills/rust-programming-a7933597-cfe1-44bd-a133-ac913d2db62c/: SKILL.md
sandbox-rs/"/home/gem"/.skills/test-skill-4adcc4d2-a30b-42cc-8c3f-7caa5e397b48/: SKILL.md
sandbox-rs/"/home/gem"/.skills/test-skill-d2990f22-814a-4e1b-8ab0-06e845fa0c90/: SKILL.md
sandbox-rs/"/home/gem"/.skills/update-test-2d860d1a-2fa5-46eb-bcf9-b65a07860304/: SKILL.md
sandbox-rs/"/home/gem"/.skills/update-test-497fd04b-452a-421c-85c9-b82cfe3766ef/: SKILL.md
sandbox-rs/"/home/gem"/.skills/web-development-694fbf8f-4c51-44db-b401-4ad5eeb990c2/: SKILL.md
sandbox-rs/"/home/gem"/.skills/web-development-a7933597-cfe1-44bd-a133-ac913d2db62c/: SKILL.md
sandbox-rs/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
sandbox-rs/src/browser/: mod.rs  service.rs  types.rs
sandbox-rs/src/handlers/: browser.rs  code.rs  factory.rs  file.rs  health.rs  mod.rs  shell.rs  skills.rs  tee.rs
sandbox-rs/src/skills/: factory.rs  mod.rs  registry.rs  types.rs
sandbox-rs/src/tee/: client.rs  mod.rs
sandbox-rs/tests/: browser_test.rs  code_test.rs  factory_test.rs  file_test.rs  health_test.rs  shell_test.rs  skills_test.rs  tee_test.rs
tests/: conftest.py  requirements.txt  run_tests.sh  test_sandbox_api.py
