[package]
name = "sandbox-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
futures = "0.3"

# New for Skills
serde_yaml = "0.9"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
regex = "1"

# Browser automation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
base64 = "0.22"
# Pins to avoid edition2024 requirement (home 0.5.12 requires Rust 1.85+)
home = "=0.5.9"
which = "=5.0.0"

# TEE (optional)
dstack-sdk = { git = "https://github.com/Dstack-TEE/dstack", optional = true }
hex = { version = "0.4", optional = true }

[features]
default = []
tee = ["dstack-sdk", "hex"]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-test = "0.4"
tempfile = "3"
